<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_cedula"
        android:layout_margin="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cedula"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_margin="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombreI"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_apellido"
        android:layout_margin="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apellido"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_correo"
        android:layout_margin="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_clave"
        android:layout_margin="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_clave"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25px"
        android:onClick="RegistrarUsuario"
        android:text="@string/button_registrar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25px"
        android:onClick="Salir"
        android:text="@string/button_salir"
        android:textSize="20dp" />
</LinearLayout>